fixed resource usage alignment

--- a/web/css/app.scss
+++ b/web/css/app.scss
@@ -26,7 +26,7 @@
 .progress-bar-wrapper {
   border: 1px solid #ccc;
   width: 25px;
-  height: 75px;
+  height: 100px;
   margin-right: 5px;
   margin-bottom: 5px;
   float: left;
