--- a/web/css/grid.scss
+++ b/web/css/grid.scss
@@ -7,7 +7,7 @@
   content: " ";
 }
 
-.col-md-2, .col-md-6, .col-md-10 {
+.col-md-2, .col-md-6, .col-md-8, .col-md-10 {
   position: relative;
   float: left;
 }
